Adding white-paper

--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -210,7 +210,8 @@ div.textBlock p:last-child {
     height: 6px;
 }
 
-a.yellowHover {
+a.yellowHover,
+.yellowHover a {
     color: whitesmoke !important;
 }
 
