--- a/client/assets/css/style.css
+++ b/client/assets/css/style.css
@@ -2,18 +2,21 @@
     font-family: ClockIcons;
     src: url("../fonts/clockicons.ttf") format("truetype");
     font-weight: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: Wrong;
     src: url("../fonts/wrongtime.ttf") format("truetype");
     font-weight: normal;
+    font-display: swap;
 }
 
 @font-face {
     font-family: Modeco;
     src: url("../fonts/Modeco-Regular.ttf") format("truetype");
     font-weight: normal;
+    font-display: swap;
 }
 
 a {
